testsuite/escript/errors/errors001-two-functions-same-name.err1
Expected an identifier, got User Function foo instead.
